--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "zookeepr",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,5 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SplitRabbit/zookeepr.git"
+  },
+  "bugs": {
+    "url": "https://github.com/SplitRabbit/zookeepr/issues"
+  },
+  "homepage": "https://github.com/SplitRabbit/zookeepr#readme",
+  "description": ""
 }
